Added DB Models, Users Service+Repository, Email Service and partial project structure

--- a/NeuroDiagnosis/pom.xml
+++ b/NeuroDiagnosis/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.26</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
