--- a/TAIP_Client_Application/NeuroDiagnosisClientApp/package.json
+++ b/TAIP_Client_Application/NeuroDiagnosisClientApp/package.json
@@ -10,17 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-material/core": "^1.3.7",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/drawer": "^6.5.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "expo": "^47.0.0",
+    "expo-secure-store": "^12.0.0",
     "react": "18.1.0",
+    "react-dom": "^18.1.0",
     "react-native": "0.70.5",
+    "react-native-document-picker": "^8.1.3",
     "react-native-document-scanner-plugin": "^0.5.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0",
-    "react-native-table-component": "^1.2.2"
+    "react-native-table-component": "^1.2.2",
+    "react-select": "^5.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
